<resources>
    <string name="app_name">What to Watch</string>

    <!-- Common -->
    <string name="error_load_label">Error to load series</string>
    <string name="series_error_401">Unauthorized access</string>
    <string name="series_error_400_generic">Bad Request</string>
    <string name="series_error_500_generic">Server Error</string>

    <!-- Drawer Layout -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Popular Fragment -->
    <string name="popular_title_label">Popular</string>

    <!-- Series Fragment -->
    <string name="shows_title_label">My Shows</string>

    <!-- To Watch Fragment -->
    <string name="watch_title_label">What to watch</string>

    <!-- Top Rated Fragment -->
    <string name="top_rated_title_label">Top Rated</string>

    <!-- On The Air Fragment -->
    <string name="on_the_air_title_label">On The Air</string>

    <!-- About Fragment -->
    <string name="synopsis_label">Synopsis</string>
    <string name="network_label">Network</string>
    <string name="overview_label">Overview</string>
    <string name="trailer_label">Trailers</string>
    <string name="genre_label">Genre</string>
    <string name="info_label">TV Show info</string>
    <string name="original_title_label">Original Title</string>
    <string name="first_air_date_label">First Air Date</string>
    <string name="last_air_date_label">Last Air Date</string>
    <string name="aired_episodes_label">Aired Episodes</string>
    <string name="runtime_label">Runtime</string>
    <string name="show_type_label">Show Type</string>
    <string name="original_language_label">Original Language</string>
    <string name="country_label">Country</string>
    <string name="certification_label">Certification</string>
    <string name="companies_label">Companies</string>
    <string name="transition_show_poster">show_poster</string>
    <string name="read_more">… See more</string>

    <!-- Details Fragment -->
    <string name="year_airs_label">%1$s \u2022 %2$s</string>
    <string name="duration_label">Duration</string>
    <string name="language_label">Language</string>
    <string name="votes_text">%1$d votes</string>
    <string name="duration_text">%1$d min</string>

    <!-- Cast Fragment -->
    <string name="cast_size_text">%1$d persons</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>