<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/popularFragment"
            android:checked="true"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/popular_title_label" />
        <item
            android:id="@+id/showsFragment"
            android:icon="@drawable/ic_baseline_star"
            android:title="@string/shows_title_label" />
        <item
            android:id="@+id/watchFragment"
            android:icon="@drawable/ic_baseline_live_tv"
            android:title="@string/watch_title_label" />
        <item
            android:id="@+id/topRatedFragment"
            android:icon="@drawable/ic_baseline_trending_up"
            android:title="@string/top_rated_title_label" />
        <item
            android:id="@+id/onTheAirFragment"
            android:icon="@drawable/ic_baseline_tv"
            android:title="@string/on_the_air_title_label" />
    </group>
</menu>