<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_series"
    app:startDestination="@id/popularFragment">

    <fragment
        android:id="@+id/popularFragment"
        android:name="grsoft.com.br.whattowatch.ui.series.popular.PopularFragment"
        android:label="@string/popular_title_label"
        tools:layout="@layout/popular_fragment" >
        <action
            android:id="@+id/action_popularFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/showsFragment"
        android:name="grsoft.com.br.whattowatch.ui.series.shows.ShowsFragment"
        android:label="@string/shows_title_label"
        tools:layout="@layout/shows_fragment" >
        <action
            android:id="@+id/action_showsFragment_to_nav_series"
            app:destination="@id/nav_details" />
    </fragment>
    <fragment
        android:id="@+id/watchFragment"
        android:name="grsoft.com.br.whattowatch.ui.series.watch.WatchFragment"
        android:label="@string/watch_title_label"
        tools:layout="@layout/watch_fragment" >
        <action
            android:id="@+id/action_watchFragment_to_nav_series"
            app:destination="@id/nav_details" />
    </fragment>
    <fragment
        android:id="@+id/topRatedFragment"
        android:name="grsoft.com.br.whattowatch.ui.series.rated.TopRatedFragment"
        android:label="@string/top_rated_title_label"
        tools:layout="@layout/top_rated_fragment" >
        <action
            android:id="@+id/action_topRatedFragment_to_nav_series"
            app:destination="@id/nav_details" />
    </fragment>
    <fragment
        android:id="@+id/onTheAirFragment"
        android:name="grsoft.com.br.whattowatch.ui.series.ontheair.OnTheAirFragment"
        android:label="@string/on_the_air_title_label"
        tools:layout="@layout/on_the_air_fragment" >
        <action
            android:id="@+id/action_onTheAirFragment_to_nav_series"
            app:destination="@id/nav_details" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="grsoft.com.br.whattowatch.ui.series.details.DetailsFragment"
        android:label="details_fragment"
        tools:layout="@layout/details_fragment" >
        <argument
            android:name="id"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>